# Laboratorio-di-programmazione-qt

./: .gitignore  CMakeLists.txt  Clock.cpp  Clock.h  QtChronometer.cpp  QtClock.cpp  QtClock.h  QtTimer.cpp  QtTimer.h  README.md  Timer.cpp  Timer.h  cronometro.cpp  cronometro.h  digitalclock.cpp  digitalclock.h  digitalclock.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  qtclock.cpp  qtclock.h  qtclock.ui
GUI/: mainpage.cpp  mainpage.h  mainpage.ui  qclock.cpp  qclock.h  qclock.ui
Non QT classes/: Clock.cpp  Clock.h  Timer.cpp  Timer.h
QT classes/: QtChronometer.cpp  QtChronometer.h  QtClock.cpp  QtClock.h  QtTimer.cpp  QtTimer.h
test/: CMakeLists.txt  QtClockTest.cpp  runAllTests.cpp
